# llm-keywords

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  extractor.env.example  pyproject.toml
extractor/: app.py  extractor.py  extractors.py  stop_words.py  utils.py
llm-keywords/: README.md  pyproject.toml  setup.cfg  setup.py
llm-keywords/llm_keywords/: assets.py
llm-keywords/llm_keywords_tests/: test_assets.py
test_extractor/: test_extractor.py  test_utils.py
