[tool.poetry]
name = "llm-keyword-extractor"
version = "0.1.0"
description = "LLM-based keywords extractor"
authors = ["Supaseth <supaseth@nanameue.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = {extras = ["parquet"], version = "^2.1.3"}
transformers = {extras = ["ja"], version = "^4.35.2"}
torch = "^2.1.1"
keybert = "^0.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
